[package]
name = "ytpd"
version = "0.1.0"
edition = "2021"
description = "Easy YouTube Music Downloader"
license = "MIT"
authors = ["Nel <heyimnel@proton.me>"]
repository = "https://github.com/heyimnel/ytpd"
readme = "README.md"

[[bin]]
name = "ytpd"
path = "src/main.rs"

[dependencies]
reqwest = "0.12.10"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
