[package]
name = "ytpd"
version = "0.1.0"
edition = "2021"
description = "Easy YouTube Music Downloader"
repository = "https://github.com/heyimnel/ytpd"
readme = "README.md"

[[bin]]
name = "ytpd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
filetime = "0.2.25"
futures = "0.3.31"
indicatif = "0.17"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
